# xbmc-platform

./: CMakeLists.txt  xbmcplatform-config.cmake.in  xbmcplatform.pc.in
debian/: changelog  changelog.in  control  copyright  libxbmcplatform-dev.install
src/util/: XMLUtils.h
